src/test/ui/span/issue-24356.stderr
error[E0046]: not all trait items implemented, missing: `Target`
  --> $DIR/issue-24356.rs:30:9
   |
30 | /         impl Deref for Thing {
31 | |             //~^ ERROR E0046
32 | |             fn deref(&self) -> i8 { self.0 }
33 | |         }
   | |_________^ missing `Target` in implementation
   |
   = note: `Target` from trait: `type Target;`

error: aborting due to previous error

